--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,9 +1,40 @@
 *{
-    
+    padding: 0;
+    margin: 0;
+}
+header{
+    color: white;
+    background: rgb(0, 0,0,0.9);
+    width: 100%;
+    position:fixed;
+    z-index: 100;
 }
 nav{
+    float: left;
+}
+nav ul{
+    list-style: none;
+    overflow: hidden;
+}
+nav ul li{
+    float: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+nav ul li a {
     display: block;
-    border-style: dashed;
-    padding: 10px;
-    margin: 22px;
+    padding: 20px;
+    color: #fff;
+    text-decoration: none;
+}
+nav ul li:hover{
+    background: #3ead47;
+}
+.contenido{
+    padding-top: 80px;
+}
+.wrapper{
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
 }
